# mind

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_citations_tool_use.py
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: chat-topic.yml
.github/scripts/: generate_topic.py
.github/workflows/: auto-generate-topic.yml  ci.yml  claude-code-review.yml  claude.yml  issue-chat.yml  publish.yml  release.yml
docs/: architecture.md  components.md  contributing.md  development.md  testing.md
docs/architecture/: conversation-ending-design.md  mcp-integration-design.md
docs/refactor/: conversation_split.md  sdk_native_features.md
docs/reference/: configuration.md  data-models.md
scripts/: test_stage2.py  test_stage2_simple.py
src/mind/: __init__.py  agent.py  cli.py  config.py  conversation.py  conversation_ending.py  logger.py  manager.py  memory.py  prompts.py  prompts.yaml  summarizer.py
tests/: conftest.py
tests/unit/: test_agent.py  test_agent_document_pool.py  test_agent_error_handling.py  test_agent_prompt_enhancement.py  test_agent_query_context.py  test_agent_tool_use.py  test_agent_tools.py  test_backward_compat.py  test_cli.py  test_cli_mcp_integration.py  test_cli_test_tools.py  test_cli_with_tools.py  test_conversation.py  test_conversation_concurrent_input.py  test_conversation_ending.py  test_conversation_search_integration.py  test_conversation_tool_injection.py  test_conversation_tools.py  test_intelligent_search_trigger.py  test_logger.py  test_manager_sdk_tools.py  test_manager_search_history_fix.py  test_memory.py  test_memory_advanced.py  (+9 more)
(+77 files in other folders)
