[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mind"
version = "0.1.0"
description = "AI agents that collaborate to spark innovation"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "gqy20", email = "qingyu_ge@foxmail.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.13",

]

dependencies = [
    "rich>=13.0.0",
    "anthropic>=0.75.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/gqy20/mind"
Repository = "https://github.com/gqy20/mind.git"

[project.scripts]
mind = "mind.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mind"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src/mind"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
